# imam-chat

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cuBLAS  README.md  build-services.sh  docker-compose.yaml  pyproject.toml  quran_test.json
app/: client_test.ipynb  config.py  config.yml  server.py
data/: islamqa_ru.json
